--- a/style.css
+++ b/style.css
@@ -9,6 +9,15 @@
 	--background-minor: #353841;
 }
 
+.noselect {
+	user-select: none;
+	-moz-user-select: none;
+	-khtml-user-select: none;
+	-webkit-user-select: none;
+	-o-user-select: none;
+}
+
+
 .template {
 	display: none !important;
 }
@@ -35,6 +44,13 @@ input {
 	border-radius: 4px;
 
 	transition: background-color 0.2s ease-in-out;
+}
+
+
+input:focus {
+	outline-style: solid;
+	outline-width: 2px;
+	outline-color: var(--foreground-minor);
 }
 
 input.bad {
@@ -179,7 +195,7 @@ input[type=number] {
 }
 
 .add_prob_button:hover .prob_edit_icon, .add_prob_button:hover .add_prob_button_text {
-	opacity: 0.7;
+	opacity: 0.8;
 }
 
 .add_prob_button:active .prob_edit_icon, .add_prob_button:active .add_prob_button_text {
@@ -196,13 +212,48 @@ input[type=number] {
 	background-color: #646cbd;
 }
 
+#error_msg {
+	background-color: var(--background-bad);
+}
+
 .msglen_workspace {
 	width: 100%;
 	height: 100%;
 	margin: 0;
 	padding: 0;
+
+	position: relative;
+
+	overflow-y: scroll;
 }
 
-#error_msg {
-	background-color: var(--background-bad);
+
+.workspace_loading {
+	width: 100%;
+	height: 100%;
+
+	margin: 0px;
+	padding: 0px;
+
+	display: flex;
+	position: absolute;
+	align-items: center;
+	justify-content: center;
 }
+
+.workspace_loading_bg {
+	background-color: var(--background-major);
+	opacity: 0.9;
+
+	position: absolute;
+	width: 100%;
+	height: 100%;
+
+}
+
+.workspace_spinner {
+	width: 100px;
+	height: 100px;
+	z-index: 100;
+}
+
