--- a/style.css
+++ b/style.css
@@ -390,3 +390,119 @@ input[type=number] {
 .workspace_table_table tr:hover td {
 	backdrop-filter: brightness(1.2);
 }
+
+#show_messages_button {
+	display: none;
+	position: fixed;
+	bottom: 20px;
+	left: 20px;
+
+	height: 80px;
+	width: 80px;
+
+	border-radius: 50px;
+	background-color: var(--background-major);
+	box-shadow: black 0 2px 10px;
+
+	transition: background-color 0.1s ease-in-out,
+				box-shadow 0.1s ease-in-out;
+}
+
+.show_messages_button_icon {
+	width: 100%;
+	height: 100%;
+}
+
+#show_messages_button:active {
+	box-shadow: black 0 1px 5px;
+	background-color: var(--foreground-minor);
+}
+
+@media only screen and (max-width: 600px) {
+	/* .msglen_layout {
+
+	} */
+
+	body {
+		font-size: 28px;
+	}
+
+	#probs_box {
+		width: 100vw;
+	}
+
+	.prob_entry_width {
+		width: 90%;
+		min-height: 60px;
+	}
+
+	input {
+		min-height: 50px;
+		min-width: 150px;
+		font-size: 36px;
+	}
+
+	#probs_box_padder {
+		height: 250px;
+		flex-shrink: 0;
+	}
+	
+	.prob_edit_icon {
+		width: 56px;
+		height: 56px;
+	}
+
+	#show_messages_button.shown {
+		display: block;
+	}
+
+	.mobile_out_of_focus {
+		display: none !important;
+	}
+
+	.workspace_table {
+		min-width: 100%;
+	}
+
+	.workspace_table .table_title {
+		font-size: 19px;
+	}
+
+	.workspace_table_table {
+		flex-grow: 1;
+	}
+	
+	.workspace_table_group {
+		justify-content: center;
+		align-items: center;
+		margin: 0px;
+		min-width: 100%;
+
+		margin-top: 25px;
+		margin-bottom: 25px;
+	}
+
+	.workspace_table_group_title {
+		font-size: 22px;
+	}
+
+	.workspace_space {
+		justify-content: center;
+		padding-bottom: 135px;
+	}
+
+	.ws_var {
+		font-size: 29px;
+	}
+
+	.ws_index {
+		font-size: 11px;
+	}
+
+	.remove_prob_button {
+		border: solid;
+		border-color: white;
+		border-radius: 14px;
+		border-width: 3px;
+	}
+}
